# ao-rs

./: .ai-devkit.json  .gitignore  BENCHMARKING.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ao-rs.yaml  ao-rs.yaml.example  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/frontend-design/: SKILL.md
.github/workflows/: ci.yml  release-artifacts.yml  release.yml
crates/ao-api/: Cargo.toml
crates/ao-api/src/: lib.rs
crates/ao-cli/: Cargo.toml
crates/ao-cli/src/: main.rs  tests.rs
crates/ao-cli/src/cli/: agent_config.rs  args.rs  auto_scm.rs  browser.rs  lifecycle_wiring.rs  local_issue.rs  mod.rs  plugins.rs  printing.rs  project.rs  spawn_helpers.rs
crates/ao-cli/src/commands/: cleanup.rs  config_help.rs  dashboard.rs  doctor.rs  kill.rs  mod.rs  open.rs  orchestrator.rs  plugin.rs  pr.rs  prune.rs  review_check.rs  send.rs  spawn.rs  start.rs  status.rs  stop.rs  update.rs  verify.rs  watch.rs
crates/ao-cli/src/commands/setup/: mod.rs  openclaw.rs
crates/ao-cli/src/commands/snapshots/: ao_rs__commands__config_help__tests__config_help_output_snapshot.snap
crates/ao-cli/src/session/: attach.rs  claim_pr.rs  mod.rs  remap.rs  restore.rs
crates/ao-core/: Cargo.toml
crates/ao-core/src/: activity_log.rs  config.rs  cost_ledger.rs  cost_log.rs  dashboard_payload.rs  error.rs  events.rs  gh.rs  instructions_file.rs  lib.rs  lifecycle.rs  lockfile.rs  notifier.rs  notifier_resolution.rs  opencode_session_id.rs  orchestrator_prompt.rs  orchestrator_spawn.rs  parity_config_validation.rs  parity_feedback_tools.rs  parity_metadata.rs  parity_notifier_resolution.rs  parity_observability.rs  parity_plugin_registry.rs  parity_session_strategy.rs  parity_utils.rs  paths.rs  prompt_builder.rs  rate_limit.rs  reaction_engine.rs  reactions.rs  restore.rs  scm.rs  scm_transitions.rs  session_manager.rs  shell.rs  traits.rs  types.rs  workspace_hooks.rs
crates/ao-core/src/config/: agent.rs  lifecycle.rs  mod.rs  power.rs  project.rs  reactions.rs
crates/ao-core/src/lifecycle/: mod.rs  refresh.rs  scm_poll.rs  stuck.rs  tick.rs  transition.rs
crates/ao-core/src/prompts/: orchestrator.md
crates/ao-core/src/reaction_engine/: actions.rs  escalation.rs  mod.rs  resolve.rs
crates/ao-core/tests/: notification_flow.rs  parity_config_validation_parity_test.rs  parity_metadata_parity_test.rs  parity_modules_meta.rs  parity_observability_feedback_parity_test.rs  parity_plugin_registry_parity_test.rs  parity_session_strategy_parity_test.rs  parity_test_utils.rs  parity_utils_parity_test.rs  reaction_engine_issue24_retry_escalation.rs
crates/ao-dashboard/: Cargo.toml  build.rs
crates/ao-dashboard/src/: lib.rs  routes.rs  sse.rs  state.rs
crates/ao-desktop/: README.md
crates/ao-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/ao-desktop/src-tauri/icons/: icon.icns
crates/ao-desktop/ui/: index.html  main.js  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
crates/ao-plugin-agent-claude-code/: Cargo.toml
crates/ao-plugin-agent-claude-code/src/: lib.rs
crates/ao-plugin-notifier-discord/: Cargo.toml
crates/ao-plugin-notifier-discord/src/: lib.rs
crates/ao-plugin-notifier-ntfy/: Cargo.toml
crates/ao-plugin-notifier-ntfy/src/: lib.rs
crates/ao-plugin-notifier-stdout/src/: lib.rs
crates/ao-plugin-runtime-tmux/examples/: manual.rs
crates/ao-plugin-runtime-tmux/src/: lib.rs
crates/ao-plugin-runtime-tmux/tests/: integration.rs
crates/ao-plugin-scm-github/: Cargo.toml
crates/ao-plugin-scm-github/src/: lib.rs  parse.rs
crates/ao-plugin-tracker-github/: Cargo.toml
crates/ao-plugin-tracker-github/src/: lib.rs
crates/ao-plugin-workspace-worktree/: Cargo.toml
crates/plugins/agent-aider/: Cargo.toml
crates/plugins/agent-aider/src/: lib.rs
crates/plugins/agent-claude-code/: Cargo.toml
crates/plugins/agent-claude-code/src/: lib.rs
crates/plugins/agent-codex/: Cargo.toml
crates/plugins/agent-codex/src/: lib.rs
crates/plugins/notifier-desktop/: Cargo.toml
crates/plugins/notifier-desktop/src/: lib.rs
crates/plugins/notifier-ntfy/: Cargo.toml
crates/plugins/notifier-ntfy/src/: lib.rs
crates/plugins/notifier-slack/: Cargo.toml
crates/plugins/notifier-slack/src/: lib.rs
crates/plugins/notifier-stdout/: Cargo.toml
crates/plugins/runtime-process/: Cargo.toml
crates/plugins/runtime-process/src/: lib.rs
crates/plugins/runtime-tmux/: Cargo.toml
crates/plugins/runtime-tmux/src/: lib.rs
crates/plugins/runtime-tmux/tests/: integration.rs
crates/plugins/scm-github/: Cargo.toml
crates/plugins/scm-github/src/: graphql_batch.rs  lib.rs  parse.rs  webhook.rs
crates/plugins/scm-github/tests/fixtures/: commit_statuses_only.json  merge_error_branch_protection.txt  mergeability_blocked.json  review_threads_page1.json
crates/plugins/scm-gitlab/: Cargo.toml
crates/plugins/scm-gitlab/src/: lib.rs  parse.rs  webhook.rs
crates/plugins/scm-gitlab/tests/fixtures/: mr_list_open.json
crates/plugins/tracker-github/: Cargo.toml
crates/plugins/tracker-github/src/: graphql_batch.rs  lib.rs
crates/plugins/tracker-linear/: Cargo.toml
crates/plugins/tracker-linear/src/: lib.rs
crates/plugins/workspace-clone/: Cargo.toml
crates/plugins/workspace-clone/src/: lib.rs
crates/plugins/workspace-clone/tests/: integration.rs
docs/: DEV.md  README.md  RELEASE.md  SMOKE.md  agent-orchestrator-full-port-plan.md  architecture.md  cli-reference.md  config.md  issue-14-phase1-audit.md  issue-69-cli-parity.md  plugin-spec.md  reactions.md  remaining-to-port.md  state-machine.md  terminal.md  ts-core-parity-report.md  ts-core-port-map.md  user-guide.md  validation-ported-code.md
docs/issues/: 0001-update-docs-architecture-to-match-current-code.md  0103-scm-gitlab-parity.md  0106-paths-subset.md  0108-events-minimal-surface.md
docs/parity-review/: 01-lifecycle.md  02-session.md  03-github-plugins.md  04-config-and-gaps.md  05-cleanup.md  06-rust-idiom.md  DIVERGENCES.md  REPORT.md
schema/: ao-rs.schema.json
scripts/: benchmark.sh  build-install.sh  install-local.sh  publish.sh
(+99 files in other folders)
