[workspace]
resolver = "2"
members = [
    "crates/ao-core",
    "crates/ao-cli",
    "crates/ao-plugin-workspace-worktree",
    "crates/ao-plugin-runtime-tmux",
    "crates/ao-plugin-agent-claude-code",
    "crates/ao-plugin-scm-github",
    "crates/ao-plugin-tracker-github",
    "crates/ao-plugin-notifier-stdout",
    "crates/ao-plugin-notifier-ntfy",
    "crates/ao-plugin-notifier-desktop",
    "crates/ao-plugin-notifier-discord",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
ao-core = { path = "crates/ao-core" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-util = { version = "0.7", features = ["rt"] }
libc = "0.2"
