[workspace]
resolver = "2"
members = [
    "crates/ao-core",
    "crates/ao-cli",
    "crates/ao-dashboard",
    "crates/plugins/workspace-worktree",
    "crates/plugins/runtime-tmux",
    "crates/plugins/agent-claude-code",
    "crates/plugins/scm-github",
    "crates/plugins/tracker-github",
    "crates/plugins/notifier-stdout",
    "crates/plugins/notifier-ntfy",
    "crates/plugins/notifier-desktop",
    "crates/plugins/notifier-discord",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
ao-core = { path = "crates/ao-core" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
libc = "0.2"
