[package]
name = "ao-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ao-rs"
path = "src/main.rs"

[dependencies]
ao-core = { workspace = true }
ao-plugin-workspace-worktree = { path = "../plugins/workspace-worktree" }
ao-plugin-runtime-tmux = { path = "../plugins/runtime-tmux" }
ao-plugin-agent-claude-code = { path = "../plugins/agent-claude-code" }
ao-plugin-scm-github = { path = "../plugins/scm-github" }
ao-plugin-tracker-github = { path = "../plugins/tracker-github" }
ao-plugin-notifier-stdout = { path = "../plugins/notifier-stdout" }
ao-plugin-notifier-ntfy = { path = "../plugins/notifier-ntfy" }
ao-plugin-notifier-desktop = { path = "../plugins/notifier-desktop" }
ao-plugin-notifier-discord = { path = "../plugins/notifier-discord" }
ao-dashboard = { path = "../ao-dashboard" }

tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
