[package]
name = "ao-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core traits and types for the ao-rs agent orchestrator framework"
keywords = ["agent", "orchestrator", "async", "traits", "automation"]
categories = ["development-tools", "asynchronous"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_ignored = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
libc = { workspace = true }
