[package]
name = "ao-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ao-core = { workspace = true }
ao-plugin-workspace-worktree = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
portable-pty = "0.8"

[dev-dependencies]
async-trait = { workspace = true }
tower = { version = "0.5", features = ["util"] }
