[package]
name = "ao-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ao-core = { workspace = true }
ao-plugin-workspace-worktree = { workspace = true }
ao-plugin-tracker-github = { path = "../plugins/tracker-github" }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
portable-pty = "0.8"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
url = "2.5.8"
anyhow = "1.0.102"
urlencoding = "2.1.3"

[dev-dependencies]
async-trait = { workspace = true }
tower = { version = "0.5", features = ["util"] }
