[package]
name = "ao-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"
publish = false

[[bin]]
name = "ao-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

