[package]
name = "ao-plugin-agent-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Codex agent plugin for the ao-rs orchestrator"
keywords = ["agent", "orchestrator", "codex", "plugin"]
categories = ["development-tools"]

[dependencies]
ao-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
filetime = "0.2"
