[package]
name = "ao-plugin-notifier-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Desktop notification plugin for the ao-rs orchestrator"
keywords = ["agent", "orchestrator", "notification", "plugin"]
categories = ["development-tools"]

[dependencies]
ao-core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
notify-rust = { version = "4.14", features = ["async"] }

[dev-dependencies]
tokio = { workspace = true }
