[package]
name = "ao-plugin-notifier-ntfy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "ntfy.sh notification plugin for the ao-rs orchestrator"
keywords = ["agent", "orchestrator", "ntfy", "notification", "plugin"]
categories = ["development-tools"]

[dependencies]
ao-core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
