[package]
name = "ao-plugin-notifier-slack"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Slack notification plugin for the ao-rs orchestrator"
keywords = ["agent", "orchestrator", "slack", "notification", "plugin"]
categories = ["development-tools"]

[dependencies]
ao-core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
