[package]
name = "ao-plugin-runtime-process"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Process runtime plugin for the ao-rs orchestrator"
keywords = ["agent", "orchestrator", "runtime", "process", "plugin"]
categories = ["development-tools"]

[dependencies]
ao-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
