[package]
name = "ao-plugin-scm-github"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ao-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
serde_yaml = { workspace = true }
