[package]
name = "ao-plugin-scm-gitlab"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ao-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2"

[dev-dependencies]
wiremock = "0.6"
