[package]
name = "ao-plugin-scm-gitlab"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "GitLab SCM plugin for the ao-rs orchestrator"
keywords = ["agent", "orchestrator", "gitlab", "scm", "plugin"]
categories = ["development-tools"]

[dependencies]
ao-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2"
sha2 = "0.10"

[dev-dependencies]
wiremock = "0.6"
serde_yaml = { workspace = true }
