[package]
name = "ao-plugin-tracker-github"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "GitHub issue tracker plugin for the ao-rs orchestrator"
keywords = ["agent", "orchestrator", "github", "tracker", "plugin"]
categories = ["development-tools"]

[dependencies]
ao-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
