[package]
name = "ao-plugin-workspace-clone"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Git clone workspace plugin for the ao-rs orchestrator"
keywords = ["agent", "orchestrator", "workspace", "git", "plugin"]
categories = ["development-tools"]

[dependencies]
ao-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
